# mcmaps

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  generate-gallery.yml
Examples/: README.rst  SyedSpectral_example.py
docs/: Makefile  colormap_gallery.html  requirements.txt
docs/source/: api.rst  conf.py  index.rst  installation.rst
docs/source/_static/: colormap_gallery.html
docs/source/auto_examples/: SyedSpectral_example.ipynb  SyedSpectral_example.py.md5  SyedSpectral_example.rst  SyedSpectral_example_codeobj.pickle  index.rst  sg_execution_times.rst
mcmaps/: __init__.py  generate_gallery.py
mcmaps.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mcmaps/data/: BlueDarkRed18.txt  SunShine12.txt  SyedSpectral.txt
mcmaps/source/_static/: colormap_gallery.html
tests/: test_generate_gallery.py  test_mcmaps.py
